# media-analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh_CN.md  REUSE.toml  media-analyzer.pro  media-debuger.pro
.gitee/ISSUE_TEMPLATE/: config.yml
LICENSES/: MIT.txt
assets/: dfm-xmenu-media-analyzer.conf  dfm-xmenu-media-analyzer6.conf  dfm-xmenu-media-debuger.conf  dfm-xmenu-media-debuger6.conf  media-analyzer-dbus-service  media-analyzer.desktop  media-analyzer6-dbus-service  media-analyzer6.desktop  nautilus-contextmenu.py  nautilus-contextmenu6.py  org.media.mediaanalyzer.service  org.media.mediaanalyzer.xml  org.media.mediaanalyzer6.service  org.media.mediaanalyzer6.xml  uos-contexmenu-template.conf
cmake/: FindQtCompat.cmake
debian/: changelog  control  copyright  dfm-plugin-media-analyzer.install  dfm-xmenu-media-analyzer.install  dfm-xmenu-media-analyzer6.install  media-analyzer-dbus.install  media-analyzer.install  media-analyzer6-dbus.install  nautilus-xmenu-media-analyzer.install  nautilus-xmenu-media-analyzer6.install  rules
docs/: qt_optimization_summary.md  qt_version_detection.md
extension/: CMakeLists.txt  commandhistory.cpp  commandhistory.h  main.cpp  zjsonmainwindow.cpp  zjsonmainwindow.h  zjsonnetworkmanager.cpp  zjsonnetworkmanager.h
extension/translations/: zjson-gui_en_US.ts  zjson-gui_zh_CN.ts
plans/: architecture.md  detailed-design.md  implementation-guide.md  insert-node-dialog-design.md
qml/: main.qml
qml/components/: DBackground.qml  DButton.qml  DCheckBox.qml  DFileTypeSelectorDialog.qml  DMultiSelectComboBox.qml  DSpinBox.qml  DSplitView.qml  DTextArea.qml  DTextField.qml
qml/styles/: Style.qml
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/common/: common.cpp  common.h  mediainfodisplayer.cpp  mediainfodisplayer.h  qtcompat.h  zffmpeg.cpp  zffplay.cpp  zffplay.h  zffprobe.cpp  zffprobe.h  zfftoolconfig.cpp  zfftoolconfig.h  zhighlightconfig.h  zjsonconfig.cpp  zjsonconfig.h  zlogger.h  zmediaplayermanager.cpp  zmediaplayermanager.h  zmultiselectmenu.h  zsyntaxhighlighter.cpp  zsyntaxhighlighter.h  ztableheadermanager.h  ztexteditor.cpp  ztexteditor.h  ztexthighlighter.cpp  ztexthighlighter.h  zwindowhelper.cpp  zwindowhelper.h
src/component/: zprogressbar.cpp  zprogressbar.h
src/core/: file_type_manager.cpp  file_type_manager.h  file_watcher.cpp  file_watcher.h  menu_manager.cpp  menu_manager.h
src/dfm-plugin/: CMakeLists.txt  audiomenubuilder.cpp  audiomenubuilder.h  dfm_extension_media.cpp  filetypeutils.cpp  filetypeutils.h  i18n.h  imagemenuibuilder.cpp  imagemenuibuilder.h  mediaactionhandler.cpp  mediaactionhandler.h  mediamenubuilder.h  mediamenuplugin.cpp  mediamenuplugin.h  streaminfocache.cpp  streaminfocache.h  videomenubuilder.cpp  videomenubuilder.h
src/model/: fileshistorymodel.h  mediainfotabelmodel.cpp  mediainfotabelmodel.h
src/models/: menu_file_model.cpp  menu_file_model.h  menu_tree_model.cpp  menu_tree_model.h
src/resources/: file_types.json  qml.qrc
src/widgets/: basefmtwg.cpp  basefmtwg.h  configurebuildtool.cpp  configurebuildtool.h  configurebuildtool.ui  exportwg.cpp  exportwg.h  fileswg.h  formatwg.cpp  formatwg.h  formatwg.ui  globalconfingwg.cpp  globalconfingwg.h  globalconfingwg.ui  helpquerywg.cpp  helpquerywg.h  helpquerywg.ui  insertnodedialog.cpp  insertnodedialog.h  insertnodedialog.ui  jsonfmtwg.cpp  jsonfmtwg.h  jsonfmtwg.ui  logwg.cpp  logwg.h  logwg.ui  mediapropswg.h  progressdlg.cpp  progressdlg.h  searchwg.cpp  searchwg.h  searchwg.ui  streamswg.cpp  streamswg.h  streamswg.ui  tabconfigwg.cpp  tabconfigwg.h  tabconfigwg.ui  tablefmtwg.cpp  tablefmtwg.h  (+1 more)
third_part/QJsonModel/: QJsonModel.cpp
third_part/QJsonModel/include/: QJsonModel.hpp
tools/: README.md  build_with_qt_detection.sh  clean_build_cache.sh  detect_qt_versions.sh  i18n_manager.py  qt_version_example.sh
translations/: dfm-menu-manager_en_US.ts  dfm-menu-manager_zh_CN.ts  media-analyzer_ar_SA.ts  media-analyzer_de_DE.ts  media-analyzer_en_US.ts  media-analyzer_es_ES.ts  media-analyzer_fr_FR.ts  media-analyzer_ja_JP.ts  media-analyzer_ko_KR.ts  media-analyzer_pt_BR.ts  media-analyzer_ru_RU.ts  media-analyzer_zh_CN.qm  media-analyzer_zh_CN.ts
translations/templates/: translation_guide.md
